content/v1.3.0/en/api/mission/_index.md
---
title: "mission index"
description: Mission / combat system class reference index
---
<!-- BEGIN SECTION INDEX -->

## Parent Navigation

- [API Reference](../)
- [Version Home](../../)

## Child Classes — Alphabetical

### A

- [ActionIndexCache](./ActionIndexCache)
- [Agent](./Agent)
- [AgentCreationResult](./AgentCreationResult)
- [AutoGeneratedSaveManager](./AutoGeneratedSaveManager)

### C

- [ColorAssigner](./ColorAssigner)

### D

- [DefineGameNetworkMessageType](./DefineGameNetworkMessageType)
- [DefineSynchedMissionObjectType](./DefineSynchedMissionObjectType)
- [DropExtraWeaponOnStopUsageComponent](./DropExtraWeaponOnStopUsageComponent)
- [DynamicNavmeshLocalIds](./DynamicNavmeshLocalIds)

### F

- [Formation](./Formation)
- [FormationSpawnData](./FormationSpawnData)

### I

- [IMBActionSet](./IMBActionSet)
- [IMBAgent](./IMBAgent)
- [IMBAgentVisuals](./IMBAgentVisuals)
- [IMBAnimation](./IMBAnimation)
- [IMBBannerlordChecker](./IMBBannerlordChecker)
- [IMBBannerlordConfig](./IMBBannerlordConfig)
- [IMBBannerlordTableauManager](./IMBBannerlordTableauManager)
- [IMBDebugExtensions](./IMBDebugExtensions)
- [IMBDelegate](./IMBDelegate)
- [IMBEditor](./IMBEditor)
- [IMBFaceGen](./IMBFaceGen)
- [IMBGame](./IMBGame)
- [IMBGameEntityExtensions](./IMBGameEntityExtensions)
- [IMBItem](./IMBItem)
- [IMBMapScene](./IMBMapScene)
- [IMBMessageManager](./IMBMessageManager)
- [IMBMission](./IMBMission)
- [IMBMultiplayerData](./IMBMultiplayerData)
- [IMBNetwork](./IMBNetwork)
- [IMBPeer](./IMBPeer)
- [IMBScreen](./IMBScreen)
- [IMBSkeletonExtensions](./IMBSkeletonExtensions)
- [IMBSoundEvent](./IMBSoundEvent)
- [IMBTeam](./IMBTeam)
- [IMBTestRun](./IMBTestRun)
- [IMBVoiceManager](./IMBVoiceManager)
- [IMBWindowManager](./IMBWindowManager)
- [IMBWorld](./IMBWorld)

### M

- [MBNetworkPeer](./MBNetworkPeer)
- [Mission](./Mission)
- [MissionBehavior](./MissionBehavior)
- [MultiplayerBattleColors](./MultiplayerBattleColors)
- [MultiplayerCultureColorInfo](./MultiplayerCultureColorInfo)

### O

- [OnPlatformRequestedMultiplayerJob](./OnPlatformRequestedMultiplayerJob)
- [OnSessionInvitationAcceptedJob](./OnSessionInvitationAcceptedJob)

### P

- [PerkAssemblyCollection](./PerkAssemblyCollection)
- [PlayerTypes](./PlayerTypes)
- [ProximityMapSearchStructInternal](./ProximityMapSearchStructInternal)

### S

- [ScriptingInterfaceBase](./ScriptingInterfaceBase)

### T

- [TacticOption](./TacticOption)
- [Target](./Target)


<!-- END SECTION INDEX -->
